--- a/iohyve.8
+++ b/iohyve.8
@@ -9,7 +9,7 @@
 \fBiohyve\fP \fIversion\fP
 \fBiohyve\fP \fIsetup\fP pool=[poolname] kmod=[0/1] net=[interface]
 \fBiohyve\fP \fIlist\fP
-\fBiohyve\fP \fIinfo\fP [\fB-d\fP]
+\fBiohyve\fP \fIinfo\fP
 \fBiohyve\fP \fIisolist\fP
 \fBiohyve\fP \fIfwlist\fP
 \fBiohyve\fP \fIfetch\fP [\fIURL\fP]
@@ -89,7 +89,7 @@ Lists the zfs dataset directorys for \fBiohyve\fP.
 .B
 \fIinfo\fP
 Lists all the guests along with their RAM, CPU, Size,
-OS, Loader, and Description (if \fB-d\fP is passed)
+OS, Loader, and Description in a per pool table.
 .TP
 .B
 \fIisolist\fP
